--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@
     font-size: 40px;
 }
 
-.menu-item:hover {
+.menu-item:hover, .active {
     background-color: rgb(100, 200, 167);
     border-radius: 10px;
 }
