--- a/links.css
+++ b/links.css
@@ -5,7 +5,7 @@
 
 .link-section {
     background-color: rgb(126, 229, 255);
-    width: 30%;
+    width: 35%;
     padding: 40px;
     margin: 20px;
     border-top-left-radius: 50px;
@@ -24,6 +24,7 @@
 }
 
 .link-section a{
+    display: block;
     font-size: 20px;
     margin: 15px;
     text-decoration: none;
